docs/project/debug-log.txt
# Debug Log - W1D1 V0.1
# 记录编译、运行、调试过程中出现的问题
#
# 格式：
# # 使用的命令
# # 报错内容
# # 解决方法
#

## 问题 1：config.c 中 TODO 占位符导致编译失败

# 使用的命令
make

# 报错内容
src/config.c:6:41: error: stray '\343' in program
    6 | static void remove_newline(char *text) {【todo】}
      |                                         ^~~~~~~~
src/config.c:6:43: error: 'todo' undeclared (first use in this function)
src/config.c:6:47: error: expected ';' before '}' token
src/config.c:26:47: error: stray '\343' in program
   26 |         } else if (strcmp(key, "host") == 0) {【todo】
      |                                               ^~~~~~~~
...（port、root、log 分支同样报错）

# 原因
PPT 提供的骨架代码中，remove_newline 函数体和 host/port/root/log
四个配置项分支均以 "【todo】" 占位，不是合法的 C 语句。

# 解决方法
1. 实现 remove_newline：用 strchr 找到 '\n' 并替换为 '\0'，去除 fgets 读入的换行符
2. 补全四个配置项分支：
   - host  → strncpy 拷贝到 config->host
   - port  → atoi 转换为整数存入 config->port
   - root  → strncpy 拷贝到 config->root
   - log   → strncpy 拷贝到 config->log_path
   均参照已实现的 server_name 分支模式。

# 验证
make clean && make    # 编译通过，零警告
./build/mini_web_server config/server.conf   # 运行正常，所有配置项正确输出


## 问题 2：Content-Length 硬编码，缺乏可维护性

# 使用的命令
./build/mini_web_server config/server.conf
python3 -c 'print(len("Hello, Web!\n"))'   # 辅助验证

# 问题描述
src/http_response.c 中 Content-Length 硬编码为 12，与 body 字符串耦合。
经实际验证，strlen("Hello, Web!\n") = 12（\n 已被计入），硬编码值本身碰巧正确。
但若后续修改 body 内容，容易忘记同步更新 Content-Length，属于代码质量问题。

# 解决方法
将 "Content-Length: 12\r\n" 改为 "Content-Length: %d\r\n"，使用 strlen(body)
动态计算长度，使 Content-Length 始终与 body 实际长度保持一致。

# 验证
make clean && make    # 编译通过
./build/mini_web_server config/server.conf   # 输出 Content-Length: 12，与 body 长度一致
strings build/mini_web_server | grep Content-Length   # 确认二进制中为 %d 格式化串


## 问题 3：log_init 失败时静默，main 不检查返回值

# 使用的命令
./build/mini_web_server config/bad_log.conf 2>&1
echo $?

# 问题描述
1. src/log.c 中 log_init 在 fopen 失败时只返回 -1，没有向 stderr 输出任何错误信息，
   用户无法知道日志初始化失败的原因。
2. src/main.c 中未检查 log_init 的返回值，即使日志初始化失败，程序也继续运行，
   log_info/log_error 发现 log_file==NULL 后静默跳过，日志完全丢失。

# 解决方法
1. log.c：在 fopen 失败时，使用 fprintf(stderr, ...) 输出 "failed to open log file: <path>"
2. main.c：检查 log_init 返回值，失败时打印错误信息并以非零状态退出

# 验证
make clean && make                                        # 编译通过
./build/mini_web_server config/server.conf                # 正常配置：运行成功，日志正常写入
./build/mini_web_server config/bad_log.conf 2>&1          # 错误配置：
  # stderr → "failed to open log file: logs/missing/server.log"
  # stdout → "failed to open log file"
  # echo $? → 1


## 问题 4：测试脚本首次运行失败

# 使用的命令
bash test/test_day01.sh

# 问题描述
脚本开头有 "test -f logs/server.log"，在首次运行或 make clean 后该文件不存在，
set -e 导致脚本直接退出（exit 1），后续所有测试步骤无法执行。

# 解决方法
删除第 4-5 行（对上一轮日志的事先检查），测试应当自包含，不依赖外部前置状态。


## 问题 5：main.c 中 HTTP 响应缓冲区过小导致截断

# 使用的命令
bash test/test_day01.sh

# 问题描述
main.c 中 char response[64] 声明了 64 字节缓冲区，但 HTTP 响应总长约 77 字节。
snprintf 在 64 字节处截断，导致 body "Hello, Web!\n" 被完全截掉，
测试脚本 grep "Hello, Web!" 失败。

# 解决方法
将 response 缓冲区从 64 字节扩大到 256 字节，确保完整 HTTP 响应不被截断。

# 验证
bash test/test_day01.sh    # 输出 "DAY01 PASS"，所有检查通过
